<resources>
    <string name="app_name">Inventory List</string>
    <string name="description_splash_screen">Splash Screen Image</string>
    <string name="app_id">ca-app-pub-5562829873884786~2811209098</string>
    <string name="ad_unit_id">ca-app-pub-5562829873884786/2850382321</string>
    <string name="test_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="title_ad">Ad</string>
    <string name="hint_item_name">Item Name</string>
    <string name="hint_item_amount">Amount</string>
    <string name="text_add">Add</string>
    <string name="btn_sort_alphabetically">Sort Names</string>
    <string name="btn_sort_numerically">Sort Amount</string>
    <string name="btn_clear">Remove Items</string>
    <string name="btn_search">Search Items</string>
    <string name="text_delete">Delete</string>

    <string name="sort_names_atoz">A - Z</string>
    <string name="sort_names_ztoa">Z - A</string>
    <string name="sort_names_empty_atoz">Empty A - Z (Red)</string>
    <string name="sort_names_empty_ztoa">Empty Z - A (Red)</string>
    <string name="sort_names_leftover_atoz">Leftover A - Z (White)</string>
    <string name="sort_names_leftover_ztoa">Leftover Z - A (White)</string>
    <string name="sort_names_checked_atoz">Full A - Z (Checked)</string>
    <string name="sort_names_checked_ztoa">Full Z - A (Checked)</string>

    <string name="sort_amount_increase">Amount Increasing</string>
    <string name="sort_amount_decrease">Amount Decreasing</string>

    <string name="sort_amount_empty">Empty (Red)</string>

    <string name="sort_amount_leftover_increase">Leftover Increasing (White)</string>
    <string name="sort_amount_leftover_decrease">Leftover Decreasing (White)</string>
    <string name="sort_amount_full_increase">Full Increasing (Checked)</string>
    <string name="sort_amount_full_decrease">Full Decreasing (Checked)</string>

    <string name="remove_all">Delete All</string>
    <string name="remove_empty">Delete Empty</string>
    <string name="remove_leftover">Delete Leftover</string>
    <string name="remove_checked">Delete Full (Checked)</string>

    <string name="search_name">By Name</string>
    <string name="search_amount">By Amount</string>
    <string name="search_keyword">By Keyword</string>
    <string name="search_empty">Empty</string>
    <string name="search_leftover">Leftover</string>
    <string name="search_full">Full (Checked)</string>
    <string name="search_all">All</string>

    <string name="hint_dialog_new_text">New Name</string>
    <string name="hint_dialog_new_amount">New Amount</string>
    <string name="hint_title">Title</string>
    <string name="title_name_change">Replacing Item Name</string>
    <string name="name_to_be_changed">Name: %s</string>
    <string name="title_amount_change">"Replacing Item Amount"</string>
    <string name="amount_to_be_changed">Amount (%s): %s</string>
    <string name="hint_item_to_be_changed">Item To Be Replaced</string>
    <string name="hint_description">Description of Field Below</string>
    <string name="name_change_description">Current item name above will be replaced by the new name below.</string>
    <string name="amount_change_description">"Current amount above for %s will be replaced by the new amount below"</string>
    <string name="btn_dialog_cancel">Cancel</string>
    <string name="btn_dialog_ok">OK</string>
    <string name="btn_dialog_exit_ad">Exit</string>

    <string name="title_search_name">Searching For Item By Name</string>
    <string name="search_name_description">Enter the item\'s name below to search for that item</string>
    <string name="title_search_amount">Searching For Item By Amount</string>

    <string name="title_search_keyword">Searching For Item By Keyword</string>
    <string name="search_amount_description">Enter the amount and choose the type of comparison below to search for all the items with that amount</string>
    <string name="search_keyword_description">Enter the keyword below to search for all the items with that keyword</string>

    <string name="hint_search_name">Enter item name</string>
    <string name="hint_search_keyword">Enter keyword</string>
    <string-array name="array_comparisons">
        <item>Equal to</item>
        <item>Does not equal to</item>
        <item>Less than</item>
        <item>Less than or equal to</item>
        <item>Greater than</item>
        <item>Greater than or equal to</item>
    </string-array>

    <string name="save_inventory_as">Save Inventory As</string>
    <string name="open_inventory">Open Inventory</string>
    <string name="delete_inventory">Delete Inventory</string>
    <string name="delete_inventory_all">Delete All Inventories</string>
    <string name="rename_inventory">Rename This Inventory</string>
</resources>
