<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group_sort_amount">
        <item android:id="@+id/option_sort_amount_increase"
              android:title="@string/sort_amount_increase"/>
        <item android:id="@+id/option_sort_amount_decrease"
              android:title="@string/sort_amount_decrease"/>
        <item android:id="@+id/option_sort_amount_empty_increase"
              android:title="@string/sort_amount_empty_increase"/>
        <item android:id="@+id/option_sort_amount_empty_decrease"
              android:title="@string/sort_amount_empty_decrease"/>
        <item android:id="@+id/option_amount_leftover_increase"
              android:title="@string/sort_amount_leftover_increase"/>
        <item android:id="@+id/option_sort_amount_leftover_decrease"
              android:title="@string/sort_amount_leftover_decrease"/>
        <item android:id="@+id/option_sort_amount_full_increase"
              android:title="@string/sort_amount_full_increase"/>
        <item android:id="@+id/option_sort_amount_full_decrease"
              android:title="@string/sort_amount_full_decrease"/>
    </group>
</menu>