<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="wrap_content"
        android:padding="@dimen/item_padding">

    <TextView
            android:id="@+id/title"
            android:text="@string/title_search_amount"
            android:hint="@string/hint_title" android:gravity="center"
            android:textStyle="bold"  android:textColor="@color/black"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:textSize="@dimen/text" android:layout_marginBottom="@dimen/dialog_gap" />

    <TextView
            android:id="@+id/description"
            android:text="@string/search_amount_description"
            android:hint="@string/hint_description" android:layout_below="@+id/title"
            android:textColor="@color/black" android:textSize="@dimen/text"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_gap_description"/>

    <LinearLayout
            android:id="@+id/layout_search"
            android:layout_below="@+id/description"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_gap_description"
            android:layout_marginBottom="@dimen/dialog_gap_description">

        <Spinner
                android:id="@+id/array_comparisons"
                android:layout_width="match_parent" android:layout_height="match_parent"
                android:layout_weight="1" android:textColor="@color/black"
                android:background="@drawable/display"  android:gravity="center"
                android:layout_marginRight="@dimen/gap_btwn_widgets"
                android:layout_marginEnd="@dimen/gap_btwn_widgets"/>

        <EditText
                android:id="@+id/field_search_amount"
                android:hint="@string/hint_item_amount" android:textColor="@color/black"
                android:textSize="@dimen/text" android:background="@color/field"
                android:inputType="numberDecimal" android:layout_weight="1"
                android:layout_width="match_parent" android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dialog_gap_description"
                android:layout_marginBottom="@dimen/dialog_gap_description"
                android:layout_marginLeft="@dimen/gap_btwn_widgets"
                android:layout_marginStart="@dimen/gap_btwn_widgets"
                android:gravity="center"
                android:imeOptions="flagNoExtractUi"
                tools:ignore="Autofill"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/buttons"
            android:orientation="horizontal" android:layout_below="@+id/layout_search"
            android:layout_width="match_parent" android:layout_height="wrap_content">

        <Button
                android:id="@+id/btn_dialog_cancel"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:textSize="@dimen/text" android:text="@string/btn_dialog_cancel" android:textColor="@color/white"
                android:background="@drawable/button_manage" android:layout_weight="1"
                android:layout_marginRight="@dimen/gap_btwn_widgets" android:layout_marginEnd="@dimen/gap_btwn_widgets"
                tools:ignore="ButtonStyle"/>

        <Button
                android:id="@+id/btn_dialog_ok"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:textSize="@dimen/text" android:text="@string/btn_dialog_ok" android:textColor="@color/white"
                android:background="@drawable/button_manage" android:layout_weight="1"
                android:layout_marginLeft="@dimen/gap_btwn_widgets" android:layout_marginStart="@dimen/gap_btwn_widgets"
                tools:ignore="ButtonStyle" android:padding="@dimen/btn_padding"/>

    </LinearLayout>

</RelativeLayout>