<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SupplyList">

    <LinearLayout
            android:id="@+id/layout_add_item"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/layout_list_buttons" app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal" android:padding="@dimen/item_padding">

        <EditText
                android:layout_width="0dp" android:layout_height="match_parent"
                android:hint="@string/hint_item_name" android:textSize="@dimen/text" android:gravity="center"
                android:layout_weight="1" android:scrollHorizontally="true"
                android:singleLine="true" android:id="@+id/editableName"
                android:textColor="@color/black" android:background="@color/field"
                android:inputType="text"/>

        <EditText
                android:layout_width="0dp" android:layout_height="match_parent"
                android:hint="@string/hint_item_amount" android:textSize="@dimen/text" android:gravity="center"
                android:layout_weight="1" android:scrollHorizontally="true"
                android:singleLine="true" android:id="@+id/editableAmount"
                android:textColor="@color/black" android:background="@color/field"
                android:layout_marginStart="@dimen/gap_btwn_widgets" android:layout_marginLeft="@dimen/gap_btwn_widgets"
                android:layout_marginRight="@dimen/gap_btwn_widgets" android:layout_marginEnd="@dimen/gap_btwn_widgets"
                android:inputType="number"/>

        <Button
                android:layout_width="wrap_content" android:layout_height="match_parent"
                android:text="@string/text_add" android:textSize="@dimen/text" android:textColor="@color/white"
                android:background="@drawable/button_add" android:id="@+id/btn_add"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/layout_list_buttons"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/list_display" app:layout_constraintTop_toBottomOf="@+id/layout_add_item"
            android:orientation="horizontal" android:padding="@dimen/item_padding">

        <Button
                android:id="@+id/btn_sort_names" android:textColor="@color/white"
                android:layout_width="wrap_content" android:layout_height="match_parent"
                android:text="@string/btn_sort_alphabetically" android:textSize="@dimen/text"
                android:background="@drawable/button_manage" android:layout_weight="1"/>

        <Button
                android:id="@+id/btn_sort_amount" android:textColor="@color/white"
                android:layout_width="wrap_content" android:layout_height="match_parent"
                android:text="@string/btn_sort_numerically" android:textSize="@dimen/text"
                android:background="@drawable/button_manage" android:layout_weight="1"
                android:layout_marginStart="@dimen/gap_btwn_widgets" android:layout_marginLeft="@dimen/gap_btwn_widgets"
                android:layout_marginRight="@dimen/gap_btwn_widgets" android:layout_marginEnd="@dimen/gap_btwn_widgets"/>

        <Button
                android:layout_width="wrap_content" android:layout_height="match_parent"
                android:text="@string/btn_clear" android:textSize="@dimen/text" android:textColor="@color/white"
                android:background="@drawable/button_manage" android:layout_weight="1" android:id="@+id/btn_clear"
                android:layout_marginRight="@dimen/gap_btwn_widgets" android:layout_marginEnd="@dimen/gap_btwn_widgets"/>

        <Button
                android:id="@+id/btn_search" android:layout_weight="1" android:background="@drawable/button_manage"
                android:layout_width="wrap_content" android:layout_height="match_parent"
                android:text="@string/btn_search" android:textSize="@dimen/text" android:textColor="@color/white"
/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/list_display"
            android:layout_width="match_parent" android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/layout_list_buttons"/>

</android.support.constraint.ConstraintLayout>