<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/item_padding">

    <TextView
            android:id="@+id/title_ad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_ad"
            android:textColor="@color/black"
            android:textSize="@dimen/text"/>

    <com.google.android.gms.ads.AdView
            android:layout_below="@+id/title_ad"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_gap"
            android:layout_marginBottom="@dimen/dialog_gap_description"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/test_ad_unit_id"/>

        <Button
                android:id="@+id/btn_dialog_exit_ad"
                android:layout_below="@+id/adView"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:textSize="@dimen/text" android:text="@string/btn_dialog_exit_ad" android:textColor="@color/white"
                android:background="@drawable/button_manage"
                android:layout_marginLeft="@dimen/gap_btwn_widgets" android:layout_marginStart="@dimen/gap_btwn_widgets"
                tools:ignore="ButtonStyle"/>

</RelativeLayout>