<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/display_layout" android:padding="@dimen/item_padding">

        <CheckBox
                android:layout_width="wrap_content" android:layout_height="match_parent"
                android:id="@+id/checkbox"/>

        <TextView android:layout_width="0dp" android:layout_height="match_parent"
                  android:textSize="@dimen/text" android:hint="@string/hint_item_name"
                  android:layout_weight="1" android:singleLine="false"
                  android:id="@+id/display_name" android:gravity="center"
                  android:textColor="@color/black" android:background="@drawable/display"/>

        <TextView android:layout_width="0dp" android:layout_height="match_parent"
                  android:textSize="@dimen/text" android:hint="@string/hint_item_amount"
                  android:layout_weight="1" android:singleLine="false"
                  android:id="@+id/display_amount" android:gravity="center"
                  android:textColor="@color/black" android:background="@drawable/display"
                  android:layout_marginLeft="@dimen/gap_btwn_widgets" android:layout_marginStart="@dimen/gap_btwn_widgets"
                  android:layout_marginRight="@dimen/gap_btwn_widgets" android:layout_marginEnd="@dimen/gap_btwn_widgets"/>

        <Button android:layout_width="wrap_content" android:layout_height="match_parent"
                android:text="@string/text_delete" android:textSize="@dimen/text" android:textColor="@color/white"
                android:background="@drawable/button_remove" android:id="@+id/btn_delete"/>

</LinearLayout>